CSS complete. Next: Add remaining webpages and media queries.

--- a/CouBooks.html
+++ b/CouBooks.html
@@ -3,31 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <title>CouBooks</title>
+    <!-- Link to the external CSS file -->
+    <link rel="stylesheet" href="styles2.css">
 </head>
+
 <body>
+        <!-- FIRST PART: header + nav side by side in a blue box -->
+        <div class="top-part">
+            <header>
+                <h1>CouBooks</h1>
+                <h2>A Webtech demo site</h2>
+            </header>
+            <nav>
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">COURSES</a></li>
+                    <li><a href="#">RESERVATION</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                </ul>
+            </nav>
+        </div>
 
-<header>
-    <h1>
-        CouBooks
-    </h1>
-    <h2>
-        A Webtech demo site
-    </h2>
-</header>
+        <!-- SECOND PART: main content -->
+        <div class="middle-part">
+            <main>
+                <article>
+                    <h2>WELCOME TO THE COUBOOKS WEBSITE</h2>
+                    <h3>ARE YOU READY TO STUDY?</h3>
 
-<nav>
-    <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">COURSES</a></li>
-        <li><a href="#">RESERVATION</a></li>
-        <li><a href="#">ABOUT</a></li>
-    </ul>
-</nav>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam
+                        lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam
+                        viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent
+                        et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt
+                        congue enim, ut porta lorem lacinia consectetur.
+                    </p>
 
-<!-- main content -->
-<main>
+                    <p>
+                        Donec ut librero sed accu vehicula ultricies a non tortor. Lorem
+                        ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut
+                        gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id
+                        dolor.
+                    </p>
+                </article>
 
-</main>
+                <aside>
+                    <h2>OPENING HOURS</h2>
+
+                    <ul>
+                        <li>MON: 9am-11am</li>
+                        <li>TUE: 1pm-4pm</li>
+                        <li>FRI: 1pm-4pm</li>
+                    </ul>
+
+                    <h2>FEEDBACK</h2>
+                    <p>This concept is awesome! (Jeroen)</p>
+                    <p>Is there also a mobile app for this site? (Patrick)</p>
+                    <a href="#">Add feedback</a>
+                </aside>
+            </main>
+        </div>
+
+        <!-- THIRD PART: footer -->
+        <div class="bottom-part">
+            <footer>
+                <p>©Copyright 2050 by nobody. All rights reversed.
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Term of Use</a>
+                </p>
+            </footer>
+        </div>
 
 </body>
 </html>
