All webpages and css files completed. Next: Media queries.

--- a/Lab1_CouBooks/About.html
+++ b/Lab1_CouBooks/About.html
@@ -28,20 +28,8 @@
         <div class="middle-part">
             <main>
                 <article>
-                    <p>
-                        Below you can find an overview of all available courses.
-                    </p>
+                    <h2>ABOUT THIS WEBSITE...</h2>
 
-                    <h2>Computer Networks</h2>
-                    <ul>
-                        <li>Computer networking: a Top down approach.</li>
-                    </ul>
-
-                    <h2>Operating Systems</h2>
-                    <ul>
-                        <li>Lec: explore kernels and threads.</li>
-                        <li>Lab: design an operation system for temperature sensor from scratch.</li>
-                    </ul>
                 </article>
             </main>
         </div>
