--- a/Lab1_CouBooks/Home.html
+++ b/Lab1_CouBooks/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>CouBooks</title>
     <!-- Link to the external CSS file -->
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="Home.css">
 </head>
 
 <body>
