Add media queries to Home.css.

--- a/Lab1_CouBooks/Feedback.html
+++ b/Lab1_CouBooks/Feedback.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>CouBooks</title>
     <!-- Link to the external CSS file -->
-    <link rel="stylesheet" href="feedback_styles.css">
+    <link rel="stylesheet" href="Feedback.css">
 </head>
 
 <body>
